added controller.js to hold the controllers

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <!-- navbar -->
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse" ng-controller="MainCtrl">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#/">Todo App in AngularJs</a>
@@ -39,6 +39,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.min.js"></script>
   <!-- my own -->
+  <script src="controllers.js"></script>
   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
