--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <!-- navbar -->
-  <nav class="navbar navbar-inverse" ng-controller="MainCtrl">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#/">Todo App in AngularJs</a>
